<resources>
    <string name="app_name">TimeBrief</string>
    <string name="title_backup">Backup</string>
    <string name="sort_by_time">Sort By Time</string>
    <string name="sort_by_count">Sort By Count</string>
    <string name="sort_by_days">Sort By Days</string>
    <string name="title_restore">Restore</string>
    <string name="backup_data">Backup Data</string>
    <string name="backup_management">Backup Management</string>
    <string name="clear_all">Clear All</string>
    <string name="current_version">Version</string>
    <string name="about">About</string>
    <string name="about_me">Please feel free to contact me if you have any questions or any suggestions.\n\nemail: ruoyi_ran@foxmail.com</string>
    <string name="upload_data">Upload Data</string>
    <string name="download_data">Download Data</string>
    <string name="edit">Edit</string>
    <string name="list_settings">List Settings</string>
    <string name="chart_settings">Chart Settings</string>
    <string name="start_time">BeginTime</string>
    <string name="end_time">EndTime</string>
    <string name="all_records">All Records</string>
    <string name="ok">Ok</string>
    <string name="custom">Custom</string>
    <string name="all">All</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="quarter">Quarter</string>
    <string name="year">Year</string>
    <string name="total_events">Total Events</string>
    <string name="total_time">Total Time</string>
    <string name="time_usage">Time Usage</string>
    <string name="settings">Settings</string>
    <string name="time_statistics">Statistics</string>
    <string name="this_week">This Week</string>
    <string name="today">Today</string>
    <string name="this_quarter">This Quarter</string>
    <string name="this_month">This Month</string>
    <string name="this_year">This Year</string>
    <string name="hour_short">h</string>
    <string name="minute_short">m</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="desc">Description</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="save_failed">Save failed</string>
    <string name="save_file_to">File has saved to: </string>
    <string name="delete_success">Delete success</string>
    <string name="delete_failed">Delete failed</string>
    <string name="delete_confirm">Are sure delete?</string>
    <string name="no_data">No data</string>
    <string name="restore_hint">Are you sure restore %1$d items from server？\n(present data will be override)</string>
    <string name="restore_hint2">Are you sure restore %1$d items from file？\n(present data will be override)</string>
    <string name="restore_success">Restore success</string>
    <string name="parse_data_failed">Failed to parse data</string>
    <string name="clear_data_hint">Are you sure clear all data?</string>
    <string name="clear_success">Clear success</string>
    <string name="clear_failed">Clear failed</string>
    <string name="download_failed">Download failed</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_failed">Upload failed</string>
    <string name="wait">Please wait...</string>
    <string name="in_request">Processing...</string>
    <string name="restore_failed">Restore data failed</string>
    <string name="read_data_error">Failed to read file</string>
    <string name="no_records">no records</string>
    <string name="start_time_error">Start time can not be lager than end time</string>
    <string name="end_time_error">End time can not be lager than start time</string>
    <string name="end_date_error">Start date can not be lager than end date</string>
    <string name="server">Server: </string>
    <string name="change_host">Change host address</string>
    <string name="invalid_link">%s is not a valid link</string>
    <string-array name="chinese_week_string_array">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="chinese_month_string_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
