<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/text_title_color"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_server_addr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_selector"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/server"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_server_addr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_backup_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_selector"
        android:clickable="true"
        android:focusable="true"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/backup_data"
            android:textSize="16sp" />
    </LinearLayout>

    <include layout="@layout/cut_off_line" />

    <LinearLayout
        android:id="@+id/layout_backup_management"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_selector"
        android:clickable="true"
        android:focusable="true"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/backup_management"
            android:textSize="16sp" />
    </LinearLayout>

    <include layout="@layout/cut_off_line" />

    <RelativeLayout
        android:id="@+id/layout_clear_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_selector"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/clear_all"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_clear_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:textSize="16sp" />
    </RelativeLayout>

    <include layout="@layout/cut_off_line" />

    <RelativeLayout
        android:id="@+id/layout_upload_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_selector"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="12dp"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/upload_data"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_upload_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:textSize="16sp" />
    </RelativeLayout>

    <include layout="@layout/cut_off_line" />

    <RelativeLayout
        android:id="@+id/layout_download_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_selector"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="12dp"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/download_data"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_download_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:textSize="16sp" />
    </RelativeLayout>

    <include layout="@layout/cut_off_line" />

    <RelativeLayout
        android:id="@+id/layout_current_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_selector"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/current_version"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_current_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:textSize="16sp" />
    </RelativeLayout>

    <include layout="@layout/cut_off_line" />

    <RelativeLayout
        android:id="@+id/layout_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_selector"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/about"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>