<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_option_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pop_selector_top"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/all" />

            <ImageView
                android:id="@+id/img_all_done"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/baseline_done_black_24dp"
                android:tint="@android:color/holo_orange_dark"
                android:visibility="visible" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/text_gray" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_option_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pop_selector_top"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/day" />

            <ImageView
                android:id="@+id/img_day_done"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/baseline_done_black_24dp"
                android:tint="@android:color/holo_orange_dark"
                android:visibility="visible" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/text_gray" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_option_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pop_selector_top"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/week" />

            <ImageView
                android:id="@+id/img_week_done"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/baseline_done_black_24dp"
                android:tint="@android:color/holo_orange_dark"
                android:visibility="visible" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/text_gray" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_option_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pop_selector_top"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/month" />

            <ImageView
                android:id="@+id/img_month_done"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/baseline_done_black_24dp"
                android:tint="@android:color/holo_orange_dark"
                android:visibility="visible" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/text_gray" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_option_quarter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pop_selector_top"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/quarter" />

            <ImageView
                android:id="@+id/img_quarter_done"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/baseline_done_black_24dp"
                android:tint="@android:color/holo_orange_dark"
                android:visibility="visible" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/text_gray" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_option_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pop_selector_top"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/year" />

            <ImageView
                android:id="@+id/img_year_done"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/baseline_done_black_24dp"
                android:tint="@android:color/holo_orange_dark"
                android:visibility="visible" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:text="@string/custom" />

            <Switch
                android:id="@+id/custom_date_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:switchMinWidth="55dp"
                android:textOff=""
                android:textOn=""
                android:checked="false"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_time_select"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/layout_start_time"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/pop_selector_center"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time"
                    android:textColor="@color/text_week_color"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/text_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:gravity="center_vertical"
                android:text="~" />

            <LinearLayout
                android:id="@+id/layout_end_time"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/pop_selector_center"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time"
                    android:textColor="@color/text_week_color"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/text_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_ok"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/pop_selector_bottom"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ok"
            android:textColor="@android:color/holo_orange_dark" />
    </RelativeLayout>

</LinearLayout>